fix(ui/Page): title gap issue and centered data attibute naming

--- a/packages/ui/src/assets/css/page.css
+++ b/packages/ui/src/assets/css/page.css
@@ -11,8 +11,9 @@
   grid-template-columns: 100%;
 }
 
-.dz-page[data-alignment="true"] {
+.dz-page[data-centered="true"] {
   justify-items: center;
+  align-items: center;
   max-width: var(--dz-page-max-width);
   margin: auto;
 }
